assets/css/style.css
.container-lg {
  max-width: 1200px;
}
.container-md {
  max-width: 1200px;
}
.container {

}
@media (min-width: 576px) {
  .container {
    /* min-width: 960px; */
    /* max-width: 90%; */
    /* padding-left: 2%; */
    /* padding-right: 2%; */
  }
}

a, a:hover {
  color: inherit;
  text-decoration: none;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle,
.btn-primary.focus, .btn-primary:focus,
.btn-primary:hover,
.btn-primary {
  background: rgb(160, 0, 0);
  border-color: rgb(160, 0, 0);
}
.btn-blue:not(:disabled):not(.disabled).active, .btn-blue:not(:disabled):not(.disabled):active, .show>.btn-blue.dropdown-toggle,
.btn-blue.focus, .btn-blue:focus,
.btn-blue:hover,
.btn-blue {
  color: white;
  background: rgb(4, 0, 129);
  border-color: rgb(4, 0, 129);
}
.btn-sm {
  font-size: .7rem;
  padding: .25rem .5rem;
}
@media (max-width: 575.99px) {
  .btn-sm {
    padding: .1rem .5rem;
  }
}
@media (min-width: 576px) {
  .btn-sm {
    font-size: .8rem;
  }
}
.mb-1-p {
  margin-bottom: 1%;
}
.mb-5-p {
  margin-bottom: 7.5%;
}
.mt-5-p {
  padding-top: 3vw;
}
@media (min-width: 1200px) {
  .mt-5-p {
    padding-top: 3rem;
  }
}
.mr-4-p {
  margin-right: 3%;
}

.p-5-p {
  padding: 5%;
}
.px-5-p {
  padding-left: 5%;
  padding-right: 5%;
}
.py-3-p {
  padding-top: 2%;
  padding-bottom: 2%;
}
.py-5-p {
  padding-top: 5%;
  padding-bottom: 5%;
}
@media (min-width: 576px) {  
  .py-5-p {
    padding-top: 2%;
    padding-bottom: 2%;
  }
}
.modal-content {
  margin: 0 auto;
  width: 95%;
}
.navbar-light .navbar-nav .nav-link,
.text-secondary {
  color: #4d4d4d !important;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  background-color: #ddd;
}
.nav-pills .nav-link {
  border-radius: 0;
  border-top: 0.5px solid #606060;
  font-size: small;
  padding: .25rem 0 .25rem .5rem;
}

.tab-content.schedule>.tab-pane {
  border-radius: .5rem;
  border: 0.5px solid #606060;
  box-sizing: border-box;
  position: relative;
  padding: .5rem;
  height: 68vw;
}

.tab-content.schedule>.tab-pane:after, .tab-content.schedule>.tab-pane:before {
	right: 100%;
	top: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.tab-content.schedule>.tab-pane:after {
	border-color: rgba(255, 255, 255, 0);
	border-right-color: #ffffff;
	border-width: 10px;
	margin-top: -10px;
}
.tab-content.schedule>.tab-pane:before {
	border-color: rgba(96, 11, 122, 0);
	border-right-color: #606060;
	border-width: 11px;
	margin-top: -11px;
}
#v-pills-salon:after, #v-pills-salon:before {
  top: 5%;
}
#v-pills-1:after, #v-pills-1:before {
  top: 2.2rem;
}
#v-pills-2:after, #v-pills-2:before {
  top: 4.4rem;
}
#v-pills-4:after, #v-pills-4:before {
  top: 6.1rem;
}
#v-pills-5:after, #v-pills-5:before {
  top: 8rem;
}
#v-pills-6:after, #v-pills-6:before {
  top: 9.6rem;
}
#v-pills-7:after, #v-pills-7:before {
  top: 11.2rem;
}
#v-pills-8:after, #v-pills-8:before {
  top: 13rem;
}
#v-pills-9:after, #v-pills-9:before {
  top: 14.8rem;
}

.tab-content.schedule>.tab-pane .btn {
  margin-bottom: .5rem;
  width: 9rem;
}
.tab-content.schedule>.active {
  display: flex;
  flex-direction: column;
}
@media (min-width: 576px) {
  .tab-content.schedule>.tab-pane .btn {
    width: 10rem;
  }
  .tab-content.schedule>.tab-pane {
    height: 320px;
  }
}
@media (min-width: 768px) {
  .nav-pills .nav-link {
    padding-left: 1rem;
  }
  .tab-content.schedule>.tab-pane {
    padding: .5rem 1rem;
  }
}
@media (min-width: 960px) {
  .tab-content.schedule>.tab-pane {
    height: auto;
  }
}

.bg-white-op {
  background: rgba(255, 255, 255, .7);
}
nav {
  font-family: 'Noto Sans JP', sans-serif;
  font-weight: 300;
}
@media (min-width: 1200px) {
  .nav-item {
    margin-left: .5rem;
    margin-right: .5rem;
  }
}

.sns-icon {
  font-size: .5rem;
}

.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

.bg-image {
  background-image: url('../images/top-bg.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 100%;
  height: 50vh;
  max-height: 650px;
}

.height-25 {
  height: 25%;
}
.width-45 {
  width: 45%;
}

@media (min-width: 576px) {
  .bg-image {
    height: 480px;
  }
  .width-45 {
    width: 20vw;
  }
}
@media (min-width: 768px) {
  .width-45 {
  }
}
@media (min-width: 960px) {
  .bg-image {
    height: 50vw;
  }
}
@media (min-width: 1200px) {
  .height-25 {
    height: 25%;
  }
  .width-45 {
    width: 20%;
  }
}
.header-sns-icons {
  margin-top: 2.5%;
  width: 20%;
}
.header-sns-icons a {
  padding-left: 3%;
  padding-right: 3%;
}
.p-title {
  font-size: .9rem;
}
@media (min-width: 960px) {
  .header-sns-icons {
    width: 16%;
  }
}
@media (min-width: 1200px) {
  .p-title {
    font-size: 1rem;
  }
}

.staff-img {
  background-size: 140% auto;
  background-repeat: no-repeat;
  background-position: center 5%;
  height: 20vw;
  width: 100%;
}
/* @media (min-width: 576px) {
  .staff-img {
    height: 15vw;
  }
} */
@media (min-width: 576px) {
  .staff-img {
    height: 75px;
  }
}
@media (min-width: 1200px) {
  .staff-img {
    height: 80px;
  }
}

.staff-img a {
  margin-bottom: .1rem;
  margin-right: .25rem;
}

.staff-img img {
  width: 16px;
}
.staff-page-img {
  float: left;
  width: 40%;
}

h2 {
  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
  text-align: center;
}
h2 {
  font-size: 1.5rem;
  margin: 1rem auto;
}
.h2-small {
  font-size: .5rem;
}
.h2-small img {
  width: 1.5rem;
}

@media (min-width: 768px) {
  h2 {
    font-size: 1.75rem;
  }
  .h2-small {
    font-size: .75rem;
  }
}

h3 {
  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 1.25rem;
  border-bottom: 1px solid #aaa;
}
h3 span {
  display: inline-block;
  font-family: 'Noto Sans JP', serif;
  font-weight: lighter;
  font-size: .8rem;
  margin-top: 7px;
  margin-left: auto;
}
.text-serif {
  font-family: 'ヒラギノ明朝 ProN', serif;
  text-align: center;
}

.font-family-serif {
  font-family: 'ヒラギノ明朝 ProN', serif;
  font-size: .7rem;
}

@media (min-width: 992px) {
  h3 {
    font-size: 1.35rem;
  }
  .font-family-serif {
    font-size: 1rem;
  }
}

.b-shadow {
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}
.font-size-small {
  font-size: 11px;
}
.font-size-xsmall {
  font-size: 10px;
}
.font-size-12 {
  font-size: 9px;
  letter-spacing: -0.3px;
}
.font-size-11 {
  font-size: 9px;
  letter-spacing: -0.4px;
}

@media (min-width: 768px) {
  .font-size-small {
    font-size: small;
  }
  
  .font-size-xsmall {
    font-size: x-small;
  }
  
  .font-size-12 {
    font-size: 11px;
    letter-spacing: -0.2px;
  }
  .font-size-11 {
    font-size: 11px;
    letter-spacing: -0.4px;
  }
}

dt, dd {
  font-size: .9rem;
}
dt {
  font-weight: normal;
  display: list-item;
  list-style: none;
}
.dt-asterisk dt:before {
  content: "＊";
  font-family: '小塚明朝 Pro', serif;
}
dt.dt-square:before {
  content: "■";
  font-family: '小塚明朝 Pro', serif;
}

dd {
  display: inline-block;
  margin-left: auto;
  margin-bottom: .2rem;
}
.price {
  text-align: right;
  width: 4rem;
}
.price-from {
  margin-left: 0;
  text-align: right;
  width: 1.2rem;
}
.ml-35 {
  margin-left: 2rem;
}
.ml-45 {
  margin-left: 2.5rem;
}
.ul-small ul {
  padding-left: 2.5rem;
}
.ul-small li {
  font-size: .8rem;
  padding-right: 1.5rem;
}
.list-no-mark {
  padding-left: .5rem;
}
.list-no-mark li {
  font-size: .95rem;
  line-height: 1.5;
  list-style-type: none;
}
.collapse-toggle-a {
  border-top: 1px solid #808080;
  border-left: 1px solid #808080;
  display: block;
  font-size: small;
  padding: .25rem 0;
  text-align: center;
}
.collapse-toggle-a.bb {
  border-bottom: 1px solid #808080;
}
.collapse-toggle-a.br {
  border-right: 1px solid #808080;
}
.collapse-toggle-a.collapsed {
  background: #eaeaea;
}

@media (min-width: 992px) {
  #collapse-parent .collapse:not(.show) {
    display: block;
  }
}

.container.staff {
  font-weight: 300;
  font-size: .9rem;
  padding-left: 5%;
  padding-right: 5%;
}
@media (min-width: 576px) {
  .container.staff {
    padding-left: 3%;
    padding-right: 3%;
  }
}
@media (min-width: 1200px) {
  .container.staff {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

.staff-h2 {
  margin-top: 4%;
  margin-bottom: 2%;
}
@media (min-width: 576px) {
  .staff-h2 {
    margin-bottom: 0;
  }
}
h3.staff-h3 {
  border-bottom: 0;
  font-family: initial;
  font-size: 1rem;
}
h3.staff-h3 span {
  font-weight: normal;
  font-size: 90%;
  margin-top: 7px;
  margin-left: auto;
}
h4  {
  font-family: 'Noto Sans JP', serif;
  font-weight: 600;
  font-size: 1rem;
  margin-top: 5%;
}
.font-weight-normal {
  font-weight: normal;
  font-size: 3vw;
  line-height: 1.2;
}
@media (max-width: 413.99px) {
  h3.staff-h3 {
    font-size: 3.5vw;
    margin-bottom: .25rem;
  }
}
@media (min-width: 576px) {
  h3.staff-h3 {
    font-size: 1.35rem;
  }
  h4 {
    font-size: 1.1rem;
  }
  .font-weight-normal {
    font-size: .9rem;
  }
}

.iframe-sm {
  border: 0;
  width: 32%;
  height: 300px;
  margin-left: 1.5%;
  margin-bottom: 1.5%;
  float: right;
}

.clear-right {
  clear: right;
}
@media (max-width: 575.99px) {
  .clear-left {
    clear: left;
    padding-top: 0.5%;
  }
}
.w-22 {
  width: 40%;
}
@media (min-width: 576px) {
  .w-22 {
    width: 22.5%;
  }  
}
.pic-container {
  height: 30vw;
}
.bg-picture {
  background-size: 120%;
  background-position: center 10%;
  background-repeat: no-repeat;
  height: 27vw;
  width: 100%;
  overflow: hidden;
}
@media (min-width: 576px) {
  .bg-picture {
    height: 160px;
    margin-bottom: .5rem;
  }
}

.nav-tabs.staff {
  border-bottom: 0;
}
.nav-tabs.staff>.nav-link {
  border: 1px solid #d4d4d4;
  font-size: 3vw;
  position: relative;
  padding: .25rem 1rem;
  min-width: 5rem;
  text-align: center;
}
@media (min-width: 576px) {
  .nav-tabs.staff>.nav-link {
    font-size: .9rem;
  }
}
.nav-tabs.staff>.nav-link:not(.active) {
  background: #d4d4d4;
}
.nav-tabs.staff>.nav-link.active:after {
  background-color: #fff;
	border-width: 10px;
  margin-top: 0;
  left: 0;
	top: 100%;
	border: solid #fff;
	content: " ";
	height: 10px;
	width: 99.9%;
	position: absolute;
	pointer-events: none;
}
.tab-content.staff>.tab-pane {
	border: 1px solid #d4d4d4;
  border-radius: .25rem;
  font-size: .95rem;
  padding: 1rem;
  max-height: 300px;
  overflow: scroll;
}
.mCSB_scrollTools .mCSB_draggerContainer {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAACgCAYAAAA1tf01AAAACXBIWXMAAAsSAAALEgHS3X78AAAARElEQVRYhe3KsQnAMBAEwcOVuZQvQUV9n6/YBoFzz8Ilx2RmHququ7vX+7/yMRAEQRAEQfD3EARBEARBEARBEATBc0k2TKYc4/eB+pAAAAAASUVORK5CYII=');
  background-repeat: repeat-y;
  background-size: 4px;
  background-position: center;
}
.mCS-rounded-dots-dark.mCSB_scrollTools .mCSB_draggerRail {
  background-image: none;
}

